--- a/client/src/components/Layout.css
+++ b/client/src/components/Layout.css
@@ -111,4 +111,8 @@ hr{
      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
      background-color: #555;
  }
+ h2{
+    color:white;
+    margin-left: 5%;
+ }
  
